--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:Mm86FBUbvjrY0j0WzMCLgEsbumHjldEOFLu/9DSiNRc=
 APP_DEBUG=true
-APP_URL=http://localhost:8000   
+APP_URL=http://127.0.0.1:8000
 
 APP_LOCALE=vi
 APP_FALLBACK_LOCALE=en
