--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:Mm86FBUbvjrY0j0WzMCLgEsbumHjldEOFLu/9DSiNRc=
 APP_DEBUG=true
-APP_URL=http://localhost:8000   
+APP_URL=https://nhahangthaivungtau.demo-laravel.com
 
 APP_LOCALE=vi
 APP_FALLBACK_LOCALE=en
@@ -24,8 +24,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=nhahangthaivungtau
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=nhahangthaivungtau
+DB_PASSWORD=nhahangthaivungtaunhahangthaivungtau
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
