--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:Mm86FBUbvjrY0j0WzMCLgEsbumHjldEOFLu/9DSiNRc=
 APP_DEBUG=true
-APP_URL=https://nhahangthaivungtau.demo-laravel.com
+APP_URL=https://nhahangthaivungtau.demo-laravel.site
 
 APP_LOCALE=vi
 APP_FALLBACK_LOCALE=en
